buttons dark mode issue resolved

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -32,15 +32,7 @@
 .unfilledButton:hover {
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    
-    /* Gradient text */
-    color: transparent;
-    background-clip: text;
-    -webkit-background-clip: text;
-    background-image: var(--tk-gradient-vibrant-twilight);
-    
-    /* Gradient border */
-    border: 1px solid transparent;
+    border: 1px solid var(--primary-text);
     background-origin: border-box;
 }
 
